--- a/data/cars/peugeot_504.yaml
+++ b/data/cars/peugeot_504.yaml
@@ -5,7 +5,7 @@ year : 1968-2005
 unitsProduced : 3,700,000 # 1% sold as cabriolet, ~25% break
 price : 17370fr # For the GL
 keywords :
-appearances : Le Gendarme en Balade; Gyakie - Forever Remix
+appearances : Le Gendarme en Balade; Gyakie - Forever Remix; For your eyes only (james bond)
 
 # -------------
 # ENGINE
