Add c107 hardtop version

--- a/data/cars/mercedes_r107.yaml
+++ b/data/cars/mercedes_r107.yaml
@@ -113,6 +113,8 @@ trims :
     weight: 1650
     bodyType : coupe
     seats : 5
+    model: mercedesc107
+
 
 # -------------
 # OPTIONS (available on all trims)
