Fix prices in francs

--- a/data/cars/renault_clio2.yaml
+++ b/data/cars/renault_clio2.yaml
@@ -2,7 +2,7 @@ name : Clio 2
 brand : Renault
 trim : RXT 1.6 (90) bva
 year : 1998
-price : 12600€
+price : 69500fr # 12600€
 unitsProduced : 5,631,000
 
 # -------------
