--- a/data/cars/renault_scenic1.yaml
+++ b/data/cars/renault_scenic1.yaml
@@ -2,7 +2,7 @@ name : Megane Scenic
 brand : Renault
 trim : megane scenic phase1 JA0
 year : 1996
-price : 18000€
+price : 110000fr # 18000€
 
 # -------------
 # ENGINE
