Add some price data

--- a/data/cars/sherp.yaml
+++ b/data/cars/sherp.yaml
@@ -3,7 +3,8 @@ brand : Sherp
 trim :
 year :
 unitsProduced :
-price : $65,000
+price : $115,000
+apperances : Kanye West - Follow God
 
 # -------------
 # ENGINE
