Add moar price data

--- a/data/cars/fiat_126.yaml
+++ b/data/cars/fiat_126.yaml
@@ -3,7 +3,7 @@ brand : Fiat
 trim :
 year : 1972-2000
 unitsProduced : 4,673,655
-price : 69000zł
+price : 8970fr # 69000zł
 keywords :
 
 # -------------
