--- a/data/cars/peugeot_206.yaml
+++ b/data/cars/peugeot_206.yaml
@@ -3,7 +3,7 @@ brand : Peugeot
 year : 1998
 trim : 1.1 (60)
 unitsProduced : 6,000,000
-
+price : 70 000 fr
 # -------------
 # ENGINE
 # -------------
