--- a/data/cars/mazda_323.yaml
+++ b/data/cars/mazda_323.yaml
@@ -3,7 +3,7 @@ brand : Mazda
 trim : BJ hatchback
 year : 1998 - 2003
 unitsProduced : 400,000 # approx europe
-price :
+price : 80 000 fr
 
 # -------------
 # ENGINE
