--- a/data/cars/dacia_logan.yaml
+++ b/data/cars/dacia_logan.yaml
@@ -2,7 +2,7 @@ name : Logan mcv
 brand : Dacia
 trim : logan mcv 70hp
 year : 2006
-price : 8200€
+price : 12140€ # 8200€ for the logan non mcv, 8900€ first price petrol mcv, 12140€ for diesel 7 places
 
 # -------------
 # ENGINE
