--- a/data/cars/hyundai_i20.yaml
+++ b/data/cars/hyundai_i20.yaml
@@ -7,7 +7,7 @@ price : 12600€ # 12600k premier prix 75cv, ~15k pour l'entrée de gamme
 # -------------
 # ENGINE
 # -------------
-engine : hyundai_petrol_1.2_84
+engine : hyundai 1.2 Kappa MPi
 
 # -------------
 # TRANSMISSION
