--- a/data/engines/hyundai_petrol_1.2_84.yaml
+++ b/data/engines/hyundai_petrol_1.2_84.yaml
@@ -1,4 +1,4 @@
-name : hyundai i20 1.2 petrol (84) 1.2 Kappa MPi
+name : hyundai 1.2 Kappa MPi
 hp : 84
 torqueY : [ 57.4, 86.1, 100.5, 109.1, 114.8, 118.9, 122 , 120.5, 116.2, 107.6, 98.7, 82  ]
 torqueX : [ 1000, 1500, 2000 , 2500 , 3000 , 3500 , 4000, 4500 , 5000 , 5500 , 6000, 6500]
