--- a/data/cars/citroen_ami.yaml
+++ b/data/cars/citroen_ami.yaml
@@ -9,9 +9,10 @@ price : 6000€
 # -------------
 engine :
   name :
-  hp: 8hp # 6kw
-  torqueY: [625, 312, 208, 156, 125, 89 , 62  , 41  , 31  , 25  , 21  , 18  , 16  , 13  , 7   , 0]
-  torqueX: [0  , 200, 300, 400, 500, 700, 1000, 1500, 2000, 2500, 3000, 3500, 4000, 5000, 8000, 10000]
+  power: 8hp # 6kw
+  spec : 625nm@0 8hp@8000 0nm@10000
+  # torqueY: [625, 312, 208, 156, 125, 89 , 62  , 41  , 31  , 25  , 21  , 18  , 16  , 13  , 7   , 0]
+  # torqueX: [0  , 200, 300, 400, 500, 700, 1000, 1500, 2000, 2500, 3000, 3500, 4000, 5000, 8000, 10000]
   type : electric
   layout : # boxer2, l4, v6
   displacement :
