--- a/data/cars/mazda_3_3.yaml
+++ b/data/cars/mazda_3_3.yaml
@@ -15,8 +15,8 @@ weight : 1300
 length: 4460
 width: 1795
 height: 1455
-dragCoef: 0.33 # sedan, slightly higher for hatchback
-dragArea: 2.2
+dragCoef: 0.33 # 0.275  - 0.26 sedan 0.28 hatch or 0.28 sedan 0.3 hatch
+dragArea: 2.258
 
 wheelbase: 2700
 bodyType: hatchback
